--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ header {
     padding: 28px 8%;
 }
 
+section {
+    padding: 28px 8%;
+}
+
 #navbar {
     width: 100%;
     display: flex;
@@ -97,7 +101,8 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: rgba(197, 194, 20, 0.235);
+
+        background-color: rgba(0, 0, 0, 0.944);
         height: 100vh;
         width: 50%;
         position: fixed;
@@ -114,6 +119,7 @@ header {
         text-align: center;
         display: flex;
         flex-direction: column;
+
         gap: 3rem;
         margin-top: 4rem;
         padding: 0 20px;
@@ -121,7 +127,7 @@ header {
 
     #mobile_menu .mobile_nav_list .mobile_nav_item a {
         text-decoration: none;
-        color: black;
+        color: #FFF;
         font-size: 1.2rem;
         cursor: pointer;
     }
@@ -135,4 +141,140 @@ header {
 }
 
 /* main */
-.content {}
+.home {
+    display: flex;
+    min-height: calc(100vh - 100px);
+    position: relative;
+
+}
+
+.cta {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.75rem;
+    margin-top: 5%;
+
+    & .title {
+        font-size: 4rem;
+    }
+
+    & .title span {
+        color: #e9a209;
+    }
+
+    & .description {
+        font-size: 1rem;
+    }
+
+    & .cta-buttons {
+        display: flex;
+        gap: 3rem;
+
+        & a {
+            text-decoration: none;
+            color: #1d1d1def;
+        }
+
+        & #phone_button {
+            background-color: #fffffe;
+            padding: 10px 12px;
+            border-radius: 12px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 8px;
+            box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+            transition: all ease 0.4s;
+        }
+
+        #phone_button button {
+            box-shadow: none;
+        }
+
+        & #phone_button:hover {
+            background-color: #f7ce002a;
+        }
+    }
+}
+
+
+
+.social-medias-buttons {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    a {
+        color: #000000;
+        background-color: #FFF;
+        padding: 10px 16px;
+        border-radius: 12px;
+        transition: all ease 0.2s;
+    }
+
+    a:hover {
+        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+    }
+
+
+}
+
+.banner {
+    display: flex;
+    align-items: start;
+    justify-content: end;
+    width: 70%;
+    margin-top: 2rem;
+
+}
+
+.banner img {
+    height: 100%;
+    width: fit-content;
+}
+
+.shape {
+    background-color: #ffe8b4;
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    border-radius: 40% 30% 1% 20%;
+    top: 0;
+    right: 0;
+    z-index: -2;
+}
+
+@media screen and (max-width:1270px) {
+    .home {
+        flex-direction: column-reverse;
+        min-height: 100%;
+        padding-top: 0px;
+    }
+
+
+    .banner {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .banner img {
+        height: 380px;
+    }
+
+    .shape {
+        display: none;
+    }
+
+    .cta {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+
+@media screen and (max-width:450px) {}
