--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
 header {
     width: 100%;
     padding: 28px 8%;
+    position: sticky;
+    top: 0;
+    background-color: #FFF9EA;
+    z-index: 999999999999999990;
 }
 
 section {
